--- a/build.gradle
+++ b/build.gradle
@@ -8,13 +8,14 @@ buildscript {
 }
 
 plugins {
-    id 'java'
+    id 'java-library'
     id 'org.springframework.boot' version "${springBootVersion}"
     id 'io.spring.dependency-management' version "${springDepMngmnt}"
+    id 'com.diffplug.spotless' version '6.22.0'
 }
 
 group = 'com.hiperboot'
-version = '0.0.1-SNAPSHOT'
+version = '0.4.0'
 
 java {
     sourceCompatibility = "${javaVersion}"
@@ -27,30 +28,31 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
-//    implementation 'jakarta.persistence:jakarta.persistence-api'
     implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.14.0'
-
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    implementation group: 'org.apache.commons', name: 'commons-dbcp2', version: '2.8.0'
     implementation group: 'org.hsqldb', name: 'hsqldb', version: "${hsqldbVersion}"
 
+
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation group: 'org.testcontainers', name: 'postgresql'
     testImplementation group: 'org.testcontainers', name: 'testcontainers', version: "${testContainers}"
     testImplementation group: 'org.postgresql', name: 'postgresql', version: '42.7.1'
     testImplementation group: 'org.testcontainers', name: 'junit-jupiter', version: "${testContainers}"
-    implementation group: 'org.apache.commons', name: 'commons-dbcp2', version: '2.8.0'
-
-//    testImplementation group: 'org.junit.platform', name: 'junit-platform-suite-api', version: '1.10.1'
-
     testImplementation "org.assertj:assertj-core:3.17.2"
 
     compileOnly("org.projectlombok:lombok:${lombokVersion}")
     annotationProcessor("org.projectlombok:lombok:${lombokVersion}")
     testAnnotationProcessor("org.projectlombok:lombok:${lombokVersion}")
     testCompileOnly("org.projectlombok:lombok:${lombokVersion}")
-
-
 }
 
 tasks.named('test') {
     useJUnitPlatform()
+}
+
+spotless {
+    java {
+        licenseHeaderFile "${project.rootDir}/license.txt"
+        target 'src/**/*.java'
+    }
 }
