--- a/build.gradle
+++ b/build.gradle
@@ -62,3 +62,11 @@ mavenPublishing {
 
     signAllPublications()
 }
+
+tasks.named('bootJar') {
+    enabled = false
+}
+
+jar {
+    archiveFileName = 'hiperboot.jar'
+}
