Changing version to 0.4.4

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 GROUP=io.github.sannonaragao
 POM_ARTIFACT_ID=hiperboot
-VERSION_NAME=0.4.4-SNAPSHOT
+VERSION_NAME=0.4.4
 
 POM_NAME=Hiperboot
 POM_DESCRIPTION=Retrieve lists or pages of data filtered and sorted in a given criteria using Spring Data
