--- a/build.gradle
+++ b/build.gradle
@@ -33,7 +33,7 @@ dependencies {
     testImplementation group: 'org.hsqldb', name: 'hsqldb', version: "${hsqldbVersion}"
 
     testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: "${springBootVersion}"
-    testImplementation group: 'org.testcontainers', name: 'postgresql'
+    testImplementation group: 'org.testcontainers', name: 'postgresql', version: '1.19.3'
     testImplementation group: 'org.testcontainers', name: 'testcontainers', version: "${testContainers}"
     testImplementation group: 'org.postgresql', name: 'postgresql', version: '42.7.1'
     testImplementation group: 'org.testcontainers', name: 'junit-jupiter', version: "${testContainers}"
