--- a/src/test/resources/application-hsqldb.yml
+++ b/src/test/resources/application-hsqldb.yml
@@ -32,4 +32,5 @@ logging:
     org.hibernate: INFO
     org.hibernate.SQL: INFO
     org.hibernate.type.descriptor.sql: INFO
+    org.hibernate.type.descriptor.sql.BasicBinder: INFO
     org.springframework.jdbc.datasource.init.ScriptUtils: INFO
