--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -29,4 +29,5 @@ logging:
     org.hibernate: INFO
     org.hibernate.SQL: INFO
     org.hibernate.type.descriptor.sql: INFO
+    org.hibernate.type.descriptor.sql.BasicBinder: INFO
     org.springframework.jdbc.datasource.init.ScriptUtils: INFO
