--- a/gradle.properties
+++ b/gradle.properties
@@ -18,3 +18,6 @@ POM_SCM_DEV_CONNECTION=scm:git:ssh://git@github.com/sannonaragao/HiperBoot.git
 POM_DEVELOPER_ID=sannon
 POM_DEVELOPER_NAME=Sannon Aragão
 POM_DEVELOPER_URL=https://github.com/sannonaragao/
+
+SONATYPE_CONNECT_TIMEOUT_SECONDS=180
+SONATYPE_CLOSE_TIMEOUT_SECONDS=900
