UUID data type support. Creating getSpecificationFromFilters method.  Small test improvements.

--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -31,3 +31,4 @@ logging:
     org.hibernate.type.descriptor.sql: INFO
     org.hibernate.type.descriptor.sql.BasicBinder: INFO
     org.springframework.jdbc.datasource.init.ScriptUtils: INFO
+    org.hibernate.SQL.tool.schema.internal.SchemaCreatorImpl: INFO
